--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-rng-client-api', version: '1.3'
     compile group: 'org.apache.commons', name: 'commons-rng-sampling', version: '1.3'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
 
     compile group: 'com.opencsv', name: 'opencsv', version: '4.6'
 
@@ -128,5 +130,6 @@ task cleanAllPatchAnalysis(type: Delete) {
         include "**/*.blocks"
         include "**/*.statements"
         include "sampler_results.csv"
+        include "results/*"
     }
 }
